# VapourSynth-NNEDI3CL-api4

./: .gitignore  README.md  hatch_build.py  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: build-msys2.yml  build-windows.yml
NNEDI3CL/: NNEDI3CL.cpp
tools/: ci_build_msys2.py  ci_build_windows.py  ci_make_release_assets.py  ci_prepare_msys2.py  ci_prepare_windows.py  ci_smoke_installed_wheel.py  ci_smoke_package.py  package_plugin_zip.py  smoke_load_artifact.py
